--- a/Form_view.html
+++ b/Form_view.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="style.css">
     <script src="script.js"></script>
     <script src="http://code.jquery.com/jquery-1.11.1.min.js"></script>
+    <script src="./jquery.js"></script>
 
 </head>
 
